--- a/public/Library Management.html
+++ b/public/Library Management.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
         </div>
-        <div class="row p-3" id="searchResults">
+        <div class="row p-3 search-results" id="searchResults">
 
         </div>
     </div>
